--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     },
     "devDependencies": {
         "express": "4.4.1",
-        "mocha": "1.20.1",
+        "mocha": "^2.2.5",
         "expect.js": "0.3.1",
         "compression": "1.0.11",
         "jsdom": ""
