--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
         "url": "https://github.com/w3c/mobile-web-browser-emulator/issues"
     },
     "dependencies": {
-        "headless": "0.2.1",
-        "selenium-webdriver": "2.42.1",
-        "chromedriver": "2.10",
         "browsermob-proxy":"1.0.6",
-        "media-type": "0.1.0",
-        "metaviewport-parser": "0.0.1",
+        "chromedriver": "2.10",
         "easyimage": "1.0.2",
-        "intl": "0.1.4"
+        "headless": "0.2.1",
+        "intl": "^0.1.4",
+        "media-type": "0.1.0",
+        "metaviewport-parser": "^0.0.1",
+        "selenium-webdriver": "2.42.1"
     },
     "devDependencies": {
-        "express": "4.4.1",
-        "mocha": "^2.2.5",
-        "expect.js": "0.3.1",
         "compression": "1.0.11",
-        "jsdom": ""
+        "expect.js": "^0.3.1",
+        "express": "4.4.1",
+        "jsdom": "^5.4.3",
+        "mocha": "^2.2.5"
     },
     "scripts": {
        "start": "node app.js"
