--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobile-web-browser-emulator",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -17,7 +17,8 @@
         "intl": "^0.1.4",
         "media-type": "0.1.0",
         "metaviewport-parser": "^0.0.1",
-        "selenium-webdriver": "2.42.1"
+        "selenium-webdriver": "2.42.1",
+        "node-uuid": "1.4.3"
     },
     "devDependencies": {
         "compression": "1.0.11",
