Set rule for npm test

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "mocha": "^2.2.5"
     },
     "scripts": {
-       "start": "node app.js"
+       "start": "node app.js",
+       "test": "mocha --timeout 10000 --globals ErrorHandler"
     }
 }
