--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "headless": "0.2.1",
         "selenium-webdriver": "^2.46.1",
         "chromedriver": "^2.15",
-	"thin":"0.1.3",
+	"thin":"^0.3.0",
         "easyimage": "1.0.2",
         "headless": "0.2.1",
         "intl": "^0.1.4",
