--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mobile-web-browser-emulator",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -29,6 +29,6 @@
     },
     "scripts": {
        "start": "node app.js",
-       "test": "mocha --timeout 10000 --globals ErrorHandler"
+       "test": "mocha --timeout 10000 --globals ErrorHandler,domain"
     }
 }
