--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
+sudo: false
 language: node.js
+notifications:
+  irc:
+    channels:
+      - "irc.w3.org#sysreq"
+    skip_join: true
 install:
- - wget https://s3-us-west-1.amazonaws.com/lightbody-bmp/browsermob-proxy-2.0-beta-9-bin.zip
- - unzip browsermob-proxy-2.0-beta-9-bin.zip
- - browsermob-proxy-2.0-beta-9/bin/browsermob-proxy &
+ - wget https://github.com/lightbody/browsermob-proxy/releases/download/browsermob-proxy-2.1.0-beta-3/browsermob-proxy-2.1.0-beta-3-bin.zip
+ - unzip browsermob-proxy-2.1.0-beta-3-bin.zip
+ - browsermob-proxy-2.1.0-beta-3/bin/browsermob-proxy &
  - npm install
  - ./.travis-setup.sh
 script:
