--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,30 @@
-sudo: false
-language: node.js
+sudo: required
+dist: trusty
+language: node_js
+node_js:
+ - "4"
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 notifications:
   irc:
     channels:
       - "irc.w3.org#sysreq"
     skip_join: true
 install:
- - wget https://github.com/lightbody/browsermob-proxy/releases/download/browsermob-proxy-2.1.0-beta-3/browsermob-proxy-2.1.0-beta-3-bin.zip
- - unzip browsermob-proxy-2.1.0-beta-3-bin.zip
- - browsermob-proxy-2.1.0-beta-3/bin/browsermob-proxy &
+ - wget https://github.com/lightbody/browsermob-proxy/releases/download/browsermob-proxy-2.1.4/browsermob-proxy-2.1.4-bin.zip
+ - unzip browsermob-proxy-2.1.4-bin.zip
+ - ln -s browsermob-proxy-2.1.4 browsermob-proxy-2.0-beta-9
+ - browsermob-proxy-2.1.4/bin/browsermob-proxy &
  - npm install
- - ./.travis-setup.sh
+ - echo "Install phase completed."
+ - sleep 10
+before_script:
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ - sleep 10
 script:
  - npm test
