--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ install:
 before_script:
  - export DISPLAY=:99.0
  - sh -e /etc/init.d/xvfb start
+ - sleep 5
+ - google-chrome --version
  - sleep 10
 script:
  - npm test
