--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "media-type": "0.1.0",
         "metaviewport-parser": "^0.0.1",
         "selenium-webdriver": "^2.53.1",
-        "node-uuid": "1.4.8",
+        "uuid": "3.0.1",
         "rimraf": "^2.4.0"
     },
     "devDependencies": {
